Equipes: listar minhas equipes

--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "react-document-title": "^2.0.3",
     "react-dom": "^16.5.1",
     "react-fittext": "^1.0.0",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "reselect": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "^16.4.11",
