CI: revisão do .gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ cache:
 
 test_components:
   stage: test
+  image: .
   script:
-    - npm install
+#    - npm install
     - npm run test:component
