CI: revisão do .gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,37 @@
 image: docker:stable
 
 services:
-- docker:dind
+  - docker:dind
+
+stages:
+  - build
+  - test
+#  - release
+#  - deploy
+
+variables:
+  DOCKER_HOST: tcp://docker:2375
+  DOCKER_DRIVER: overlay2
+  CONTAINER_TEST_IMAGE: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
+#  CONTAINER_RELEASE_IMAGE: $CI_REGISTRY_IMAGE:latest
 
 before_script:
-- docker info
+  - docker info
+  - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
 
 build:
   stage: build
   script:
-  - docker build -t my-docker-image .
-  - docker run my-docker-image npm run test:all
+  - docker build --pull -t $CONTAINER_TEST_IMAGE .
+  - docker push $CONTAINER_TEST_IMAGE
+
+test_components:
+  stage: test
+  script:
+  - docker pull $CONTAINER_TEST_IMAGE
+  - docker run $CONTAINER_TEST_IMAGE npm run test:component
+#  - docker build -t my-docker-image .
+#  - docker run my-docker-image npm run test:component
 
 #image: node:8.10.0
 #
