--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,6 +64,7 @@ deploy_review:
     - ssh -o StrictHostKeyChecking=no rayron@"$REVIEW_SERVER" '[ -d '"'$RELEASE_DIR'"' ] || mkdir '"'$RELEASE_DIR'"';'
     - ssh -o StrictHostKeyChecking=no rayron@"$REVIEW_SERVER" 'git clone --depth 1 '"'$CI_REPOSITORY_URL'"' '"'$NEW_RELEASE_DIR'"';'
     - ssh -o StrictHostKeyChecking=no rayron@"$REVIEW_SERVER" 'ln -nfs '"'$NEW_RELEASE_DIR'"' '"'$REMOTE_APP_DIR'"'/current;'
+    - ssh -o StrictHostKeyChecking=no rayron@"$REVIEW_SERVER" 'cd '"'$REMOTE_APP_DIR'"'/current && UMI_ENV=dev npm run build;'
 
   when: manual
   only:
