--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,8 +63,8 @@ deploy_review:
     - ssh-add <(echo "$SSH_PRIVATE_KEY");
     - ssh -o StrictHostKeyChecking=no rayron@"$REVIEW_SERVER" '[ -d '"'$RELEASE_DIR'"' ] || mkdir '"'$RELEASE_DIR'"';'
     - ssh -o StrictHostKeyChecking=no rayron@"$REVIEW_SERVER" 'git clone --depth 1 '"'$CI_REPOSITORY_URL'"' '"'$NEW_RELEASE_DIR'"';'
-    - ssh -o StrictHostKeyChecking=no rayron@"$REVIEW_SERVER" 'ln -nfs '"'$NEW_RELEASE_DIR'"' '"'$REMOTE_APP_DIR'"'/current;'
-    - ssh -o StrictHostKeyChecking=no rayron@"$REVIEW_SERVER" 'cd '"'$REMOTE_APP_DIR'"'/current && npm install && UMI_ENV=dev npm run build;'
+    - ssh -o StrictHostKeyChecking=no rayron@"$REVIEW_SERVER" 'ln -nfs '"'$NEW_RELEASE_DIR'"'/dist '"'$REMOTE_APP_DIR'"'/app;'
+    - ssh -o StrictHostKeyChecking=no rayron@"$REVIEW_SERVER" 'cd '"'$NEW_RELEASE_DIR'"' && npm install && UMI_ENV=dev npm run build;'
 
   when: manual
   only:
