--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "qs": "^6.5.2",
     "rc-animate": "^2.4.4",
     "react": "^16.5.1",
+    "react-beautiful-dnd": "^9.0.2",
     "react-container-query": "^0.11.0",
     "react-copy-to-clipboard": "^5.0.1",
     "react-document-title": "^2.0.3",
