--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,16 +66,14 @@ deploy_review:
     - ssh -o StrictHostKeyChecking=no rayron@"$REVIEW_SERVER" 'git clone --depth 1 '"'$CI_REPOSITORY_URL'"' '"'$NEW_RELEASE_DIR'"';'
 #    - ssh -o StrictHostKeyChecking=no rayron@"$REVIEW_SERVER" 'cd '"'$NEW_RELEASE_DIR'"' && npm install && API_URL=http://devel7.sedis.ufrn.br/produtiivo-ws/public/api/ UMI_ENV=dev npm run build;'
     - ssh -o StrictHostKeyChecking=no rayron@"$REVIEW_SERVER" 'cd '"'$NEW_RELEASE_DIR'"' && npm install'
-    - ssh -o StrictHostKeyChecking=no rayron@"$REVIEW_SERVER" 'cd '"'$NEW_RELEASE_DIR'"' && \
-      echo API_URL=http://devel7.sedis.ufrn.br/produtiivo-ws/public/api/ >> .env && \
-      echo UMI_ENV=dev >> .env && \
+    - ssh -o StrictHostKeyChecking=no rayron@"$REVIEW_SERVER" 'cd '"'$NEW_RELEASE_DIR'"' &&
+      echo API_URL=http://devel7.sedis.ufrn.br/produtiivo-ws/public/api/ >> .env &&
+      echo UMI_ENV=dev >> .env &&
       npm run build;'
     - ssh -o StrictHostKeyChecking=no rayron@"$REVIEW_SERVER" 'cd '"'$NEW_RELEASE_DIR'"' && echo API_URL=http://devel7.sedis.ufrn.br/produtiivo-ws/public/api/ UMI_ENV=dev npm run build;'
     - ssh -o StrictHostKeyChecking=no rayron@"$REVIEW_SERVER" 'cd '"'$NEW_RELEASE_DIR'"' && find . -mindepth 1 -name "dist" -prune -o -print0 | xargs -0 rm -rf;'
     - ssh -o StrictHostKeyChecking=no rayron@"$REVIEW_SERVER" 'ln -nfs '"'$NEW_RELEASE_DIR'"'/dist '"'$REMOTE_APP_DIR'"'/app;'
   when: manual
-  only:
-    - master
 
 #deploy:
 #  stage: deploy
