--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,13 +63,24 @@ deploy_review:
   script:
     - ssh-add <(echo "$SSH_PRIVATE_KEY");
     - ssh -o StrictHostKeyChecking=no rayron@"$REVIEW_SERVER" '[ -d '"'$RELEASE_DIR'"' ] || mkdir '"'$RELEASE_DIR'"' &&
+
+      echo -e "--->  Clonando o repositório\n" &&
       git clone --depth 1 '"'$CI_REPOSITORY_URL'"' '"'$NEW_RELEASE_DIR'"' &&
-      cd '"'$NEW_RELEASE_DIR'"' &&
-      npm install &&
+
+      echo -e "--->  Instalando dependências\n" &&
+      cd '"'$NEW_RELEASE_DIR'"' && npm install &&
+
+      echo -e "--->  Gerando .env\n" &&
       echo API_URL=http://devel7.sedis.ufrn.br/produtiivo-ws/public/api/ >> .env &&
       echo UMI_ENV=dev >> .env &&
+
+      echo -e "--->  Gerando build\n" &&
       npm run build &&
+
+      echo -e "--->  Limpando build\n" &&
       find . -mindepth 1 -name "dist" -prune -o -print0 | xargs -0 rm -rf &&
+
+      echo -e "--->  Colocando nova release em produção\n" &&
       ln -nfs '"'$NEW_RELEASE_DIR'"'/dist '"'$REMOTE_APP_DIR'"'/current &&
       cd '"'$REMOTE_APP_DIR'"' && cp .htaccess ./current/.htaccess'
   when: manual
