CI(review): clonando o projeto do branch do qual se quer fazer o review

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,15 +65,13 @@ deploy_review:
     - ssh -o StrictHostKeyChecking=no rayron@"$REVIEW_SERVER" '[ -d '"'$RELEASE_DIR'"' ] || mkdir '"'$RELEASE_DIR'"' &&
 
       echo -e "--->  Clonando o repositório\n" &&
-      git clone --depth 1 '"'$CI_REPOSITORY_URL'"' '"'$NEW_RELEASE_DIR'"' &&
+      git clone --depth 1 -b  '"'$CI_COMMIT_REF_NAME'"' '"'$CI_REPOSITORY_URL'"' '"'$NEW_RELEASE_DIR'"' &&
 
       echo -e "--->  Instalando dependências\n" &&
       cd '"'$NEW_RELEASE_DIR'"' && npm install &&
 
       echo -e "--->  Gerando build\n" &&
-      API_URL=http://devel7.sedis.ufrn.br/produtiivo-ws/public/api/ \
-      UMI_ENV=dev \
-      npm run build &&
+      API_URL=http://devel7.sedis.ufrn.br/produtiivo-ws/public/api/ UMI_ENV=dev npm run build &&
 
       echo -e "--->  Limpando build\n" &&
       find . -mindepth 1 -name "dist" -prune -o -print0 | xargs -0 rm -rf &&
