--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Produtiivo",
-  "short_name": "Produtiivo",
+  "name": "The Manager",
+  "short_name": "TheManager",
   "display": "standalone",
   "start_url": "./?utm_source=homescreen",
   "theme_color": "#002140",
@@ -13,6 +13,10 @@
     {
       "src": "icons/icon-128x128.png",
       "sizes": "128x128"
+    },
+    {
+      "src": "icons/icon-512x512.png",
+      "sizes": "512x512"
     }
   ]
 }
