DragAndDrop: atualização de dependência

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "lodash-decorators": "^6.0.1",
     "memoize-one": "^5.0.0",
     "moment": "^2.24.0",
+    "natural-drag-animation-rbdnd": "^2.0.0",
     "normalizr": "^3.2.4",
     "numeral": "^2.0.6",
     "nzh": "^1.0.4",
@@ -55,7 +56,7 @@
     "qs": "^6.6.0",
     "rc-animate": "^2.6.0",
     "react": "^16.7.0",
-    "react-beautiful-dnd": "^9.0.2",
+    "react-beautiful-dnd": "^10.0.4",
     "react-container-query": "^0.11.0",
     "react-copy-to-clipboard": "^5.0.1",
     "react-custom-scrollbars": "^4.2.1",
