--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,10 +5,12 @@
 name: ant design pro
 
 trigger:
-  batch: true
-  branches:
-    exclude:
-      - gh-pages
+  - master
+
+resources:
+  repositories:
+    - repository: self
+      fetchDepth: 1
 
 jobs:
   - job: lintAndBuild
@@ -17,9 +19,6 @@ jobs:
       vmImage: 'Ubuntu-16.04'
 
     steps:
-      - checkout: self
-        fetchDepth: 1
-        clean: false
       - script: yarn install
         displayName: install
       - script: npm run lint
@@ -36,9 +35,6 @@ jobs:
       options: '-u root'
 
     steps:
-      - checkout: self
-        fetchDepth: 1
-        clean: false
       - script: yarn install
         displayName: install
       - script: npm run test:all
@@ -48,9 +44,6 @@ jobs:
     pool:
       vmImage: 'vs2017-win2016'
     steps:
-      - checkout: self
-        fetchDepth: 1
-        clean: false
       - task: NodeTool@0
         inputs:
           versionSpec: '11.x'
@@ -65,9 +58,6 @@ jobs:
     pool:
       vmImage: 'macOS-10.13'
     steps:
-      - checkout: self
-        fetchDepth: 1
-        clean: false
       - task: NodeTool@0
         inputs:
           versionSpec: '11.x'
