CI: remove releases anteriores

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,6 +64,8 @@ deploy_review:
     - ssh-add <(echo "$SSH_PRIVATE_KEY");
     - ssh -o StrictHostKeyChecking=no rayron@"$REVIEW_SERVER" '[ -d '"'$RELEASE_DIR'"' ] || mkdir '"'$RELEASE_DIR'"' &&
 
+      rm -rf '"'$REMOTE_DEV_APP_DIR'"'/releases &&
+
       echo -e "--->  Clonando o repositório\n" &&
       git clone --depth 1 -b '"'$CI_COMMIT_REF_NAME'"' '"'$CI_REPOSITORY_URL'"' '"'$NEW_RELEASE_DIR'"' &&
 
