--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "docker:push": "npm run docker-hub:build && npm run docker:tag && docker push antdesign/ant-design-pro"
   },
   "dependencies": {
-    "@antv/data-set": "^0.10.2",
+    "@antv/data-set": "^0.10.1",
     "@babel/runtime": "^7.3.1",
     "antd": "^3.13.0",
     "bizcharts": "^3.4.3",
-    "bizcharts-plugin-slider": "^2.1.1",
+    "bizcharts-plugin-slider": "^2.1.1-beta.1",
     "classnames": "^2.2.6",
     "dva": "^2.4.1",
     "enquire-js": "^0.2.1",
@@ -52,16 +52,16 @@
     "nzh": "^1.0.4",
     "omit.js": "^1.0.0",
     "path-to-regexp": "^3.0.0",
-    "prop-types": "^15.7.2",
+    "prop-types": "^15.6.2",
     "qs": "^6.6.0",
     "rc-animate": "^2.6.0",
-    "react": "^16.8.2",
+    "react": "^16.7.0",
     "react-beautiful-dnd": "^10.0.4",
     "react-container-query": "^0.11.0",
     "react-copy-to-clipboard": "^5.0.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-document-title": "^2.0.3",
-    "react-dom": "^16.8.2",
+    "react-dom": "^16.7.0",
     "react-fittext": "^1.0.0",
     "react-media": "^1.9.2",
     "react-router-dom": "^4.3.1",
@@ -69,7 +69,7 @@
   },
   "devDependencies": {
     "@types/react": "^16.8.1",
-    "@types/react-dom": "^16.8.1",
+    "@types/react-dom": "^16.0.11",
     "antd-pro-merge-less": "^1.0.0",
     "antd-theme-webpack-plugin": "^1.2.0",
     "babel-eslint": "^10.0.1",
@@ -82,7 +82,7 @@
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-compat": "^2.7.0",
+    "eslint-plugin-compat": "^2.6.3",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.0",
     "eslint-plugin-markdown": "^1.0.0",
@@ -100,11 +100,11 @@
     "stylelint-config-prettier": "^4.0.0",
     "stylelint-config-standard": "^18.2.0",
     "tslint": "^5.12.1",
-    "tslint-config-prettier": "^1.18.0",
+    "tslint-config-prettier": "^1.17.0",
     "tslint-react": "^3.6.0",
-    "umi": "^2.5.0",
+    "umi": "^2.4.4",
     "umi-plugin-ga": "^1.1.3",
-    "umi-plugin-react": "^1.5.0"
+    "umi-plugin-react": "^1.4.2"
   },
   "optionalDependencies": {
     "puppeteer": "^1.12.1"
