--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test:component": "umi test ./src/components",
     "test:all": "node ./tests/run-tests.js",
     "prettier": "node ./scripts/prettier.js",
+    "docker:bash": "docker exec -it ant-design-pro_dev bash",
     "docker:dev": "docker-compose -f ./docker/docker-compose.dev.yml up",
     "docker:build": "docker-compose -f ./docker/docker-compose.dev.yml build",
     "docker-prod:dev": "docker-compose -f ./docker/docker-compose.yml up",
