--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
   },
   "dependencies": {
     "@antv/data-set": "^0.10.1",
-    "@babel/runtime": "^7.3.1",
-    "antd": "^3.13.0",
-    "bizcharts": "^3.4.3",
+    "@babel/runtime": "^7.3.4",
+    "antd": "^3.15.1",
+    "bizcharts": "^3.4.5",
     "bizcharts-plugin-slider": "^2.1.1-beta.1",
     "classnames": "^2.2.6",
     "dva": "^2.4.1",
@@ -56,34 +56,34 @@
     "prop-types": "^15.6.2",
     "qs": "^6.6.0",
     "rc-animate": "^2.6.0",
-    "react": "^16.7.0",
-    "react-beautiful-dnd": "^10.0.4",
+    "react": "^16.8.4",
+    "react-beautiful-dnd": "^10.1.0",
     "react-container-query": "^0.11.0",
     "react-copy-to-clipboard": "^5.0.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-document-title": "^2.0.3",
-    "react-dom": "^16.7.0",
+    "react-dom": "^16.8.4",
     "react-fittext": "^1.0.0",
     "react-media": "^1.9.2",
-    "umi": "^2.4.4",
+    "umi": "^2.6.2",
     "reselect": "^4.0.0"
   },
   "devDependencies": {
-    "@types/react": "^16.8.1",
-    "@types/react-dom": "^16.0.11",
+    "@types/react": "^16.8.8",
+    "@types/react-dom": "^16.8.2",
     "antd-pro-merge-less": "^1.0.0",
     "antd-theme-webpack-plugin": "^1.2.0",
     "babel-eslint": "^10.0.1",
     "chalk": "^2.4.2",
     "check-prettier": "^1.0.1",
     "cross-env": "^5.2.0",
-    "cross-port-killer": "^1.0.1",
+    "cross-port-killer": "^1.1.0",
     "enzyme": "^3.9.0",
-    "eslint": "^5.13.0",
+    "eslint": "^5.15.3",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.0.0",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-compat": "^2.6.3",
+    "eslint-plugin-compat": "^3.0.1",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.0",
     "eslint-plugin-markdown": "^1.0.0",
@@ -92,7 +92,7 @@
     "husky": "^1.3.1",
     "jest-puppeteer": "^4.0.0",
     "less": "^3.9.0",
-    "lint-staged": "^8.1.1",
+    "lint-staged": "^8.1.5",
     "merge-umi-mock-data": "^1.0.4",
     "mockjs": "^1.0.1-beta3",
     "prettier": "^1.16.4",
@@ -104,11 +104,11 @@
     "stylelint-config-standard": "^18.2.0",
     "stylelint-declaration-block-no-ignored-properties": "^1.1.0",
     "stylelint-order": "^2.0.0",
-    "tslint": "^5.12.1",
+    "tslint": "^5.14.0",
     "tslint-config-prettier": "^1.17.0",
     "tslint-react": "^3.6.0",
     "umi-plugin-ga": "^1.1.3",
-    "umi-plugin-react": "^1.4.2"
+    "umi-plugin-react": "^1.7.0"
   },
   "optionalDependencies": {
     "puppeteer": "^1.12.1"
@@ -138,7 +138,9 @@
   ],
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint-staged"
+      "pre-commit": "npm run lint-staged",
+      "pre-push": "npm run lint-staged && npm test",
+      "post-merge": "npm install"
     }
   }
 }
