Remove suporte ao IE11

--- a/package.json
+++ b/package.json
@@ -127,7 +127,8 @@
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not ie <= 10"
+    "not ie <= 11",
+    "not dead"
   ],
   "checkFiles": [
     "src/**/*.js*",
