fix:补全PageHeader组件d.ts定义 (#3662)
* fix:补全PageHeader组件d.ts定义

* add itemRender

* prettier add history

(cherry picked from commit f22234a63e4d2171cd9e732b4ee1ccfdde9ad024)

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "umi": "^2.6.2"
   },
   "devDependencies": {
+    "@types/history": "^4.7.2",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.2",
     "antd-pro-merge-less": "^1.0.0",
