--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "react-media": "^1.9.2",
     "react-text-mask": "^5.4.3",
     "reselect": "^4.0.0",
-    "umi": "^2.6.2"
+    "umi": "^2.6.2",
+    "umi-plugin-react": "^1.7.2"
   },
   "devDependencies": {
     "@types/history": "^4.7.2",
@@ -109,8 +110,7 @@
     "tslint": "^5.14.0",
     "tslint-config-prettier": "^1.17.0",
     "tslint-react": "^3.6.0",
-    "umi-plugin-ga": "^1.1.3",
-    "umi-plugin-react": "^1.7.0"
+    "umi-plugin-ga": "^1.1.3"
   },
   "optionalDependencies": {
     "puppeteer": "^1.12.1"
