--- a/package.json
+++ b/package.json
@@ -89,7 +89,6 @@
     "react-media": "^1.9.2",
     "react-text-mask": "^5.4.3",
     "reselect": "^4.0.0",
-    "serverless-http": "^1.9.1",
     "umi": "^2.6.2",
     "umi-plugin-react": "^1.7.2",
     "umi-request": "^1.0.5"
@@ -134,7 +133,8 @@
     "tslint": "^5.14.0",
     "tslint-config-prettier": "^1.17.0",
     "tslint-react": "^3.6.0",
-    "umi-plugin-ga": "^1.1.3"
+    "umi-plugin-ga": "^1.1.3",
+    "serverless-http": "^1.9.1"
   },
   "optionalDependencies": {
     "puppeteer": "^1.12.1"
