--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lint:prettier": "check-prettier lint",
     "lint:style": "stylelint 'src/**/*.less' --syntax less",
     "prettier": "node ./scripts/prettier.js",
+    "site": "umi build && npm run functions:build",
     "start": "cross-env ANT_DESIGN_PRO_ONLY_DO_NOT_USE_IN_YOUR_PRODUCTION=site umi dev",
     "start:no-mock": "cross-env MOCK=none umi dev",
     "test": "umi test",
