--- a/package.json
+++ b/package.json
@@ -65,8 +65,9 @@
     "react-dom": "^16.8.4",
     "react-fittext": "^1.0.0",
     "react-media": "^1.9.2",
-    "umi": "^2.6.2",
-    "reselect": "^4.0.0"
+    "react-text-mask": "^5.4.3",
+    "reselect": "^4.0.0",
+    "umi": "^2.6.12"
   },
   "devDependencies": {
     "@types/react": "^16.8.8",
