--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "gh-pages": "^2.0.1",
     "husky": "^1.3.1",
     "jest-puppeteer": "^4.0.0",
+    "jsdom-global": "^3.0.2",
     "less": "^3.9.0",
     "lint-staged": "^8.1.5",
     "merge-umi-mock-data": "^1.0.4",
