--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "@antv/data-set": "^0.10.1",
     "@babel/runtime": "^7.3.4",
     "antd": "^3.16.1",
-    "bizcharts": "^3.4.5",
+    "bizcharts": "3.5.2-beta.1",
     "bizcharts-plugin-slider": "^2.1.1-beta.1",
     "classnames": "^2.2.6",
     "dva": "^2.4.1",
