--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "react-media": "^1.9.2",
     "react-text-mask": "^5.4.3",
     "reselect": "^4.0.0",
+    "resize-observer-polyfill": "^1.5.1",
     "umi": "^2.6.2",
     "umi-plugin-react": "^1.7.2",
     "umi-request": "^1.0.5"
