Sabiá: ClientID e RedirectUrl no .env

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 PORT=3000
-API_URL=http://devel7.sedis.ufrn.br/themanager/dev/ws/current/public/api/
+API_URL=http://localhost:8000/api/
+
+SABIA_CLIENT_ID=V5V3GjhOUh5gRLB460Oe5jQGoidEzkmKOy89B3t8
+SABIA_REDIRECT_URI=http://localhost:3000/auth/callback/sabia
