--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "merge-umi-mock-data": "^1.0.4",
     "mockjs": "^1.0.1-beta3",
     "prettier": "^1.16.4",
+    "serverless-http": "^1.9.1",
     "slash2": "^2.0.0",
     "stylelint": "^9.10.1",
     "stylelint-config-css-modules": "^1.3.0",
@@ -133,8 +134,7 @@
     "tslint": "^5.14.0",
     "tslint-config-prettier": "^1.17.0",
     "tslint-react": "^3.6.0",
-    "umi-plugin-ga": "^1.1.3",
-    "serverless-http": "^1.9.1"
+    "umi-plugin-ga": "^1.1.3"
   },
   "optionalDependencies": {
     "puppeteer": "^1.12.1"
