--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "npm run lint-staged",
-      "pre-push": "npm run lint-staged && npm test",
+      "pre-push": "npm run lint-staged && npm run test:component",
       "post-merge": "npm install"
     }
   },
