--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 PORT=3000
-API_URL=http://localhost:8000/api/
+API_URL=http://localhost:3333/
 
 SABIA_CLIENT_ID=V5V3GjhOUh5gRLB460Oe5jQGoidEzkmKOy89B3t8
 SABIA_REDIRECT_URI=http://localhost:3000/auth/callback/sabia
