--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "lint:style": "stylelint 'src/**/*.less' --syntax less",
     "prettier": "node ./scripts/prettier.js",
     "site": "umi build && npm run functions:build",
-    "start": "cross-env ANT_DESIGN_PRO_ONLY_DO_NOT_USE_IN_YOUR_PRODUCTION=site umi dev",
+    "start": "umi dev",
     "start:no-mock": "cross-env MOCK=none umi dev",
     "test": "umi test",
     "test:all": "node ./tests/run-tests.js",
@@ -75,7 +75,6 @@
     "normalizr": "^3.2.4",
     "numeral": "^2.0.6",
     "nzh": "^1.0.4",
-    "omit.js": "^1.0.0",
     "path-to-regexp": "^3.0.0",
     "prop-types": "^15.6.2",
     "qs": "^6.6.0",
@@ -83,7 +82,6 @@
     "react": "^16.8.4",
     "react-beautiful-dnd": "^11.0.3",
     "react-container-query": "^0.11.0",
-    "react-copy-to-clipboard": "^5.0.1",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.8.4",
     "react-fittext": "^1.0.0",
@@ -116,7 +114,6 @@
     "eslint-plugin-jsx-a11y": "^6.2.0",
     "eslint-plugin-markdown": "^1.0.0",
     "eslint-plugin-react": "^7.12.4",
-    "gh-pages": "^2.0.1",
     "husky": "^2.2.0",
     "jest-puppeteer": "^4.1.0",
     "jsdom-global": "^3.0.2",
